# range-cloud-lib

./: CMakeLists.txt  README.md
doc/: RELEASE_NOTES.md
include/: rcl_access_mode.h  rcl_access_owner.h  rcl_access_rights.h  rcl_ai_query.h  rcl_argument_option.h  rcl_auth_token.h  rcl_auth_token_validator.h  rcl_cloud_action.h  rcl_cloud_action_info.h  rcl_cloud_ai_query_request.h  rcl_cloud_ai_query_response.h  rcl_cloud_client.h  rcl_cloud_process_info.h  rcl_cloud_process_request.h  rcl_cloud_process_response.h  rcl_cloud_process_result.h  rcl_cloud_session_info.h  rcl_cloud_session_manager.h  rcl_cloud_tool_action.h  rcl_file_info.h  rcl_file_manager.h  rcl_file_manager_cache.h  rcl_file_manager_settings.h  rcl_file_quota.h  rcl_file_tools.h  rcl_group_info.h  rcl_http_client.h  rcl_http_client_settings.h  rcl_http_message.h  rcl_http_proxy_settings.h  rcl_http_server.h  rcl_http_server_settings.h  rcl_http_settings.h  rcl_network_message.h  rcl_open_ssl_tool.h  rcl_open_ssl_tool_settings.h  rcl_report_record.h  rcl_software_manager.h  rcl_software_manager_settings.h  rcl_tls_key_store.h  (+2 more)
src/: rcl_access_mode.cpp  rcl_access_owner.cpp  rcl_access_rights.cpp  rcl_ai_query.cpp  rcl_argument_option.cpp  rcl_auth_token.cpp  rcl_cloud_action.cpp  rcl_cloud_action_info.cpp  rcl_cloud_ai_query_request.cpp  rcl_cloud_ai_query_response.cpp  rcl_cloud_client.cpp  rcl_cloud_process_info.cpp  rcl_cloud_process_request.cpp  rcl_cloud_process_response.cpp  rcl_cloud_process_result.cpp  rcl_cloud_session_info.cpp  rcl_cloud_session_manager.cpp  rcl_cloud_tool_action.cpp  rcl_file_info.cpp  rcl_file_manager.cpp  rcl_file_manager_cache.cpp  rcl_file_manager_settings.cpp  rcl_file_quota.cpp  rcl_file_tools.cpp  rcl_group_info.cpp  rcl_http_client.cpp  rcl_http_client_settings.cpp  rcl_http_message.cpp  rcl_http_proxy_settings.cpp  rcl_http_server.cpp  rcl_http_server_settings.cpp  rcl_http_settings.cpp  rcl_network_message.cpp  rcl_open_ssl_tool.cpp  rcl_open_ssl_tool_settings.cpp  rcl_report_record.cpp  rcl_software_manager.cpp  rcl_software_manager_settings.cpp  rcl_tls_key_store.cpp  rcl_tls_trust_store.cpp  (+1 more)
tests/: CMakeLists.txt  tst_access_mode.cpp  tst_access_owner.cpp  tst_auth_token.cpp  tst_file_quota.cpp
translations/: en.ts  sk.ts
